Shut down the textrun cache on shutdown.  Bug 357779, r=vlad, sr=roc