layout/build/nsLayoutStatics.cpp
@@ -97,10 +97,17 @@ PRBool NS_SVGEnabled();
 #include "inDOMView.h"
 #endif
 
+#ifdef MOZ_CAIRO_GFX
+#include "gfxTextRunCache.h"
+#endif
+
 #include "nsError.h"
 #include "nsTraceRefcnt.h"
 
 static nsrefcnt sLayoutStaticRefcnt;
+#ifdef MOZ_CAIRO_GFX
+static PRBool initedGfxTextRunCache;
+#endif
 
 nsresult
 nsLayoutStatics::Initialize()
@@ -185,6 +192,15 @@ nsLayoutStatics::Initialize()
     return rv;
   }
 
+#ifdef MOZ_CAIRO_GFX
+  rv = gfxTextRunCache::Init();
+  initedGfxTextRunCache = PR_TRUE;  
+  if (NS_FAILED(rv)) {
+    NS_ERROR("Could not initialize gfxTextRunCache");
+    return rv;
+  }
+#endif
+  
   return NS_OK;
 }
 
@@ -247,6 +263,12 @@ nsLayoutStatics::Shutdown()
   nsTextControlFrame::ShutDown();
   nsXBLWindowKeyHandler::ShutDown();
   nsAutoCopyListener::Shutdown();
+
+#ifdef MOZ_CAIRO_GFX
+  if (initedGfxTextRunCache) {
+    gfxTextRunCache::Shutdown();
+  }  
+#endif
 }
 
 void
